subindo modificacoes do meu backup

--- a/logica/wp15-farquaad/AUTHORS
+++ b/logica/wp15-farquaad/AUTHORS
@@ -4,7 +4,7 @@
 
 Prof. Dr. Ruben Carlo Benante, @drbeco
 
-=== Group XX: Farquaad ===
+=== Group 04: Farquaad ===
 
 * Thayna Luiza Gitirana Da Cunha, @gitirana
 * Alex Bruno Seabra, @aalexbrunno
