alterando o arquivo latex

--- a/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -3,7 +3,7 @@
 % Sub-projeto do ProgramAuto
 % Autores:
 %     Prof. Dr. Ruben Carlo Benante
-%     Nome do Aluno 1
+%     Nome do Aluno Alex Bruno Seabra
 %     Nome do Aluno 2
 %
 % Data: 2021-06-14
@@ -36,8 +36,8 @@
 \floatname{algorithm}{Algoritmo} % tradução da palavra algorítimo no ambiente de índice
 
 % capa %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{ProgramAuto: subtítulo}
-\author{Ruben Carlo Benante \\ Autor2 \\ Autor3}
+\title{ProgramAuto: biblioteca Ncurses}
+\author{Ruben Carlo Benante \\ Alex Bruno Seabra \\ Autor3}
 
 \begin{document}
 
@@ -68,7 +68,7 @@ Vamos comparar os algoritmos \textit{xsort} e \textit{ysort} para bla bla.
 
 % Descrever melhor seu projeto aqui 
 
-Ensino da Linguagem de Programação \texttt{C}
+Ensino da Linguagem de Programação \texttt{C} com Ncurses...
 
 Métodos de ordenação tem a principal função de...
 
@@ -95,7 +95,7 @@ Listar os objetivos específicos
 % seção de justificativa %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Justificativa}
 
-Justificar seu projeto.
+Justificar seu projeto com Ncurses.
 
 \begin{figure}[ht]
 \centering
