--- a/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -37,7 +37,7 @@
 
 % capa %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{ProgramAuto: biblioteca Ncurses}
-\author{Ruben Carlo Benante \\ Alex Bruno Seabra \\ Autor3}
+\author{Ruben Carlo Benante \\ Alex Bruno Seabra \\ Autor3}  % nome dos outros alunos
 
 \begin{document}
 
@@ -48,7 +48,7 @@
 
 \textbf{Assunto:} Ensino da Linguagem de Programação \texttt{C}.
 
-Vamos comparar os algoritmos \textit{xsort} e \textit{ysort} para bla bla.
+O nosso projeto de extensão vai ser um minicurso de ncurses para auxiliar os ingressantes alunos de informatica e também disponibilizado no youtube para abranger qualquer pessoa interessada em aprender mais sobre  alunos da comunidade externa que queiram aprender um pouco mais sobre a linguagem C \textit{xsort} e \textit{ysort} para bla bla.
 % descrever em poucas palavras seu projeto aqui 
 
 \textbf{Local:} Escola Politécnica de Pernambuco - UPE/POLI
@@ -68,7 +68,7 @@ Vamos comparar os algoritmos \textit{xsort} e \textit{ysort} para bla bla.
 
 % Descrever melhor seu projeto aqui 
 
-Ensino da Linguagem de Programação \texttt{C} com Ncurses...
+Ensino da Linguagem de Programação \texttt{C} focando na sua biblioteca nativa Ncurses...
 
 Métodos de ordenação tem a principal função de...
 
@@ -79,8 +79,8 @@ O algoritmo \textit{Tal-e-qual} trabalha percorrendo uma árvore tal tal e tal.
 \section{Objetivos}
 
 \subsection{Objetivo Geral}
-
-Descrever o objetivo geral a ser alcançado
+O projeto tem como objetivo principal compartilhar os conhecimentos adquiridos pelos alunos envolvidos com a finalidade de melhorar o ensino dos alunos
+de informática.
 
 \subsection{Objetivos Específicos}
 
@@ -99,7 +99,7 @@ Justificar seu projeto com Ncurses.
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=.80\linewidth]{imagens/exemplo.png}
+\includegraphics[width=.80\linewidth]{backup1/imagem.png}
 \caption{Exemplo de ordenação com Bubblesort}
 \label{fig:xsort}
 \end{figure}
