--- a/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -99,7 +99,7 @@ Justificar seu projeto com Ncurses.
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=.80\linewidth]{backup1/imagem.png}
+\includegraphics[width=.80\linewidth]{imagem.png}
 \caption{Exemplo de ordenação com Bubblesort}
 \label{fig:xsort}
 \end{figure}
