--- a/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -48,7 +48,7 @@
 
 \textbf{Assunto:} Ensino da Linguagem de Programação \texttt{C}.
 
-O nosso projeto de extensão vai ser um minicurso de ncurses para auxiliar os ingressantes alunos de informatica e também disponibilizado no youtube para abranger qualquer pessoa interessada em aprender mais sobre  alunos da comunidade externa que queiram aprender um pouco mais sobre a linguagem C \textit{xsort} e \textit{ysort} para bla bla.
+Vamos mostr .
 % descrever em poucas palavras seu projeto aqui 
 
 \textbf{Local:} Escola Politécnica de Pernambuco - UPE/POLI
@@ -68,19 +68,14 @@ O nosso projeto de extensão vai ser um minicurso de ncurses para auxiliar os in
 
 % Descrever melhor seu projeto aqui 
 
-Ensino da Linguagem de Programação \texttt{C} focando na sua biblioteca nativa Ncurses...
-
-Métodos de ordenação tem a principal função de...
-
-
-O algoritmo \textit{Tal-e-qual} trabalha percorrendo uma árvore tal tal e tal.
+O projeto de extensão vai ser um minicurso sobre a biblioteca Ncurses em liguagem C. Neste curso serão abordados algumas 
+das pricipais  funções dessa biblioteca bem como algumas de suas aplicações.
 
 % seção de objetivos %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Objetivos}
 
 \subsection{Objetivo Geral}
-O projeto tem como objetivo principal compartilhar os conhecimentos adquiridos pelos alunos envolvidos com a finalidade de melhorar o ensino dos alunos
-de informática.
+O projeto tem como objetivo principal contribuir para melhorar o ensino dos discentes interessados promovendo ações para capacitação da comunidade a fim de colaborar com o desenvolvimento técnico cientifico.
 
 \subsection{Objetivos Específicos}
 
@@ -95,12 +90,12 @@ Listar os objetivos específicos
 % seção de justificativa %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Justificativa}
 
-Justificar seu projeto com Ncurses.
 
-\begin{figure}[ht]
+
+\begin{figure}[!htb]
 \centering
 \includegraphics[width=.80\linewidth]{imagem.png}
-\caption{Exemplo de ordenação com Bubblesort}
+\caption{Exemplo de aplicação do Ncurses.}
 \label{fig:xsort}
 \end{figure}
 
@@ -114,6 +109,7 @@ O algoritmo é descrito abaixo:
 
 % subseção equipamentos %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Equipamentos Necessários}
+Programas de edição de video
 
 %Listar os equipamentos necessários para a implementação do projeto.
 
@@ -124,9 +120,8 @@ O método \emph{Ysort} é caracterizado por...
 % subseção com algoritmo %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Implementação}
 
-Para conseguir blablabla
+A implementação será feita por meio de uma pequena playlist no youtube
 
-O algoritmo \textit{Ysort} segue abaixo:
 
 \begin{algorithm}
 \caption{Algoritmo Ysort}\label{alg:ysort}
@@ -167,7 +162,13 @@ O algoritmo \textit{Ysort} segue abaixo:
 % seção Plano de Trabalho %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Plano de Trabalho}
 
-Esta seção estabelece as atividades a serem realizadas.
+ \begin{itemize}
+  \item Pesquisa do conteudo
+  \item implementação dos códigos que serão usados para exemplificação
+  \item roteiro dos videos
+  \item editar os videos 
+ \end{itemize}
+
 
 % seção Plano de Trabalho %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Cronograma}
@@ -217,7 +218,8 @@ Não há impacto econômico relevante.
 % subseção de impacto social %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Impacto Social}
 
-O projeto visa contribuir com a sociedade na forma de... bla ... bla... blal
+O projeto visa contribuir com a sociedade transmitindo conhecimento gratuito aberto a todas as pessoas
+no youtube
 
 % subseção de impacto ambiental %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Impacto Ambiental}
@@ -227,9 +229,7 @@ Não há impacto ambiental relevante.
 % subseção de transferências %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Transferências}
 
-O ProgramAuto terá como objetivo a execução de aulas para ensinar a linguagem C aos discentes interessados. Contará com sua exposição de ensino gravada que será disponibilizada e a elaboração de relatórios a fim de cumprir com os aspectos estabelecidos no Plano de Trabalho.
-
-O que mais o seu projeto agrega? O que é transferido? De onde vem? Para onde vai?
+O ProgramAuto terá como objetivo a execução de aulas para ensinar a linguagem C aos discentes interessados. Contará com sua exposição de ensino gravada que será disponibilizada e a elaboração de relatórios a fim de cumprir com os aspectos estabelecidos no Plano de Trabalho. O projeto transfere conhecimento para todas as pessoas de forma gratuita a fim de colaborar com a sociedade no seu desenvolvimento cultural e intelectual.
 
 
 % seção de resultados esperados %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
