introduzindo a bibli.bib

--- a/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -188,7 +188,7 @@ Utilize uma tabela para melhor visualização.
  \caption{Tabela de custo de pontos para habilidades}
 \begin{tabular}{|l|r|}
   \hline \hline
-  Etapas & Datas \\ \hline \hline
+  \textbf{Etapas} & \textbf{Datas} \\ \hline \hline
   Pesquisa do conteudo & 24/06 \\ \hline
   implementação dos códigos & 03/07 \\ \hline
   roteiro dos videos & 11/07 \\ \hline
