--- a/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -185,7 +185,7 @@ Utilize uma tabela para melhor visualização.
 
 \begin{table}
 \begin{center}
- \caption{Tabela de custo de pontos para habilidades}
+ \caption{Tabela de cronograma do projeto de extensão}
 \begin{tabular}{|l|r|}
   \hline \hline
   \textbf{Etapas} & \textbf{Datas} \\ \hline \hline
