alterando o arquivo latex

--- a/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -81,13 +81,14 @@ O projeto tem como objetivo principal contribuir para melhorar o ensino dos disc
 Listar os objetivos específicos
 
 \begin{itemize}
- \item Proporcionar tal e tal
- \item Realizar tal e tal
+ \item Proporcionar um melhor ensino sobre Ncurses para os alunos de informática.
+ \item Ensinar Ncurses para a sociedade por meio de uma playlist no youtube.
 \end{itemize}
 
 
 % seção de justificativa %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Justificativa}
+A razão da implementação desse projeto é buscar a democratização do conhecimento visto que existem poucos conteúdos em língua portuguesa no youtube sobre a biblioteca Ncurses. 
 
 
 
@@ -108,18 +109,19 @@ O algoritmo é descrito abaixo:
 
 % subseção equipamentos %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Equipamentos Necessários}
-Programas de edição de video
+ 
+\begin{itemize}
+ \item Progranas para edição de vídeos.
+ \item Computador.
+\end{itemize}
 
 %Listar os equipamentos necessários para a implementação do projeto.
 
-Para realizar este projeto é preciso tal e tal
-
-O método \emph{Ysort} é caracterizado por...
 
 % subseção com algoritmo %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Implementação}
 
-A implementação será feita por meio de uma pequena playlist no youtube
+A implementação será feita por meio de uma pequena playlist no youtube.
 
 
 %\begin{algorithm}
@@ -179,10 +181,6 @@ A implementação será feita por meio de uma pequena playlist no youtube
 % seção Plano de Trabalho %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Cronograma}
 
-Em conjunto com a seção de Plano de Trabalho, a seção de cronograma coloca as atividades dispostas numa linha do tempo.
-
-Utilize uma tabela para melhor visualização.
-
 \begin{table}
 \begin{center}
  \caption{Tabela de cronograma do projeto de extensão}
@@ -236,12 +234,8 @@ O ProgramAuto terá como objetivo a execução de aulas para ensinar a linguagem
 
 % seção de resultados esperados %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Resultados Esperados}
+Espera-se que os indivíduos consigam sair do curso com uma fluência na biblioteca Ncurses sabendo resolver problemas relativamente complexos.
 
-Os resultados mostrados na tabela \ref{tab:resultados} demonstram ...
-
-    Concluimos,com base nos estudos e testes coletados sobre os algoritmos de ordenação propostos, que para fins educacionais, o algoritmo \textit{BubbleSort} é mais indicado devido a sua simples implementação, cabendo então para o \textit{QuickSort} ser o mais indicado entre os dois, quando requer uma demanda em menor tempo e com mais eficiência.
-
-De acordo com \cite{Benante2008phd}, este é o fim do artigo.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % referências bibliográficas %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
