--- a/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -181,6 +181,10 @@ A implementação será feita por meio de uma pequena playlist no youtube.
 % seção Plano de Trabalho %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Cronograma}
 
+ Em conjunto com a seção de Plano de Trabalho, a seção de cronograma coloca as atividades dispostas numa linha do tempo.
+
+ Utilize uma tabela para melhor visualização.
+
 \begin{table}
 \begin{center}
  \caption{Tabela de cronograma do projeto de extensão}
