--- a/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -74,7 +74,7 @@ das pricipais  funções dessa biblioteca bem como algumas de suas aplicações.
 \section{Objetivos}
 
 \subsection{Objetivo Geral}
-O projeto tem como objetivo principal contribuir para melhorar o ensino dos discentes interessados promovendo ações para capacitação da comunidade a fim de colaborar com o desenvolvimento técnico cientifico.
+O projeto tem como objetivo principal contribuir paraa melhorar o ensino dos discentes interessados promovendo ações para capacitação da comunidade a fim de colaborar com o desenvolvimento técnico cientifico.
 
 \subsection{Objetivos Específicos}
 
