--- a/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -67,28 +67,25 @@ Vamos abordar a biblioteca Ncurses e explicar o funcionamento do projeto de exte
 
 % Descrever melhor seu projeto aqui 
 
-O projeto de extensão vai ser um minicurso sobre a biblioteca Ncurses em liguagem C. Neste curso serão abordados algumas 
-das pricipais  funções dessa biblioteca bem como algumas de suas aplicações.
+O projeto de extensão vai ser um minicurso sobre a biblioteca Ncurses em linguagem C. Neste curso serão abordadas algumas das principais funções dessa biblioteca bem como algumas de suas aplicações.
 
 % seção de objetivos %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Objetivos}
 
 \subsection{Objetivo Geral}
-O projeto tem como objetivo principal contribuir paraa melhorar o ensino dos discentes interessados promovendo ações para capacitação da comunidade a fim de colaborar com o desenvolvimento técnico cientifico.
+O projeto tem como objetivo principal contribuir para melhorar o ensino dos discentes interessados promovendo ações para capacitação da comunidade a fim de colaborar com o desenvolvimento técnico científico.
 
 \subsection{Objetivos Específicos}
 
-Listar os objetivos específicos
-
 \begin{itemize}
- \item Proporcionar tal e tal
- \item Realizar tal e tal
+ \item Proporcionar um melhor ensino sobre Ncurses para os alunos de informática. 
+ \item Ensinar Ncurses para a sociedade por meio de uma playlist no youtube.
 \end{itemize}
 
 
 % seção de justificativa %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Justificativa}
-
+A razão da implementação desse projeto é buscar a democratização do conhecimento visto que existem poucos conteúdos na língua portuguesa no youtube sobre a biblioteca Ncurses.
 
 
 \begin{figure}[!htb]
@@ -108,18 +105,18 @@ O algoritmo é descrito abaixo:
 
 % subseção equipamentos %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Equipamentos Necessários}
-Programas de edição de video
+\begin{itemize}
+ \item Programas de edição de vídeos.
+ \item Computador.
+\end{itemize}
 
 %Listar os equipamentos necessários para a implementação do projeto.
 
-Para realizar este projeto é preciso tal e tal
-
-O método \emph{Ysort} é caracterizado por...
 
 % subseção com algoritmo %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Implementação}
 
-A implementação será feita por meio de uma pequena playlist no youtube
+A implementação será feita por meio de uma pequena playlist no youtube.
 
 
 %\begin{algorithm}
@@ -179,9 +176,6 @@ A implementação será feita por meio de uma pequena playlist no youtube
 % seção Plano de Trabalho %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Cronograma}
 
-Em conjunto com a seção de Plano de Trabalho, a seção de cronograma coloca as atividades dispostas numa linha do tempo.
-
-Utilize uma tabela para melhor visualização.
 
 \begin{table}
 \begin{center}
@@ -237,11 +231,7 @@ O ProgramAuto terá como objetivo a execução de aulas para ensinar a linguagem
 % seção de resultados esperados %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Resultados Esperados}
 
-Os resultados mostrados na tabela \ref{tab:resultados} demonstram ...
-
-    Concluimos,com base nos estudos e testes coletados sobre os algoritmos de ordenação propostos, que para fins educacionais, o algoritmo \textit{BubbleSort} é mais indicado devido a sua simples implementação, cabendo então para o \textit{QuickSort} ser o mais indicado entre os dois, quando requer uma demanda em menor tempo e com mais eficiência.
-
-De acordo com \cite{Benante2008phd}, este é o fim do artigo.
+Espera-se que os indivíduos consigam sair do curso com uma fluência na biblioteca Ncurses sabendo resolver problemas relativamente complexos.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % referências bibliográficas %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
