novo aquivo latex

--- a/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -3,7 +3,7 @@
 % Sub-projeto do ProgramAuto
 % Autores:
 %     Prof. Dr. Ruben Carlo Benante
-%     Nome do Aluno Alex Bruno Seabra
+%     Nome do Aluno 1
 %     Nome do Aluno 2
 %
 % Data: 2021-06-14
@@ -36,8 +36,8 @@
 \floatname{algorithm}{Algoritmo} % tradução da palavra algorítimo no ambiente de índice
 
 % capa %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{ProgramAuto: biblioteca Ncurses}
-\author{Ruben Carlo Benante \\ Alex Bruno Seabra \\ Autor3}  % nome dos outros alunos
+\title{ProgramAuto: Biblioteca Ncurses}
+\author{Ruben Carlo Benante \\ Alex Bruno Seabra \\ Adriano Jose Morais Barros Silva \\ Jose Roberto Lopes Gentile Almeida \\ Arlon Nata Alves Granja Delmondes \\ Victor Lucas Cavalcante Moreira \\ Joao Pedro Henderson Sarruf \\ Victor Machado De Araujo}
 
 \begin{document}
 
@@ -47,7 +47,9 @@
 \begin{abstract}
 
 \textbf{Assunto:} Ensino da Linguagem de Programação \texttt{C}.
-Vamos abordar a biblioteca Ncurses e explicar o funcionamento do projeto de extensão
+Vamos abordar a biblioteca Ncurses e explicar o funcionamento do projeto de extensão.
+
+
 % descrever em poucas palavras seu projeto aqui 
 
 \textbf{Local:} Escola Politécnica de Pernambuco - UPE/POLI
@@ -66,58 +68,63 @@ Vamos abordar a biblioteca Ncurses e explicar o funcionamento do projeto de exte
 \section{Introdução}
 
 % Descrever melhor seu projeto aqui 
+O projeto de extensão vai ser um minicurso sobre a biblioteca Ncurses em linguagem C.Neste curso serão abordadas algumas das principais funções dessa biblioteca bemcomo algumas de suas aplicações.
 
-O projeto de extensão vai ser um minicurso sobre a biblioteca Ncurses em linguagem C. Neste curso serão abordadas algumas das principais funções dessa biblioteca bem como algumas de suas aplicações.
 
 % seção de objetivos %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Objetivos}
 
 \subsection{Objetivo Geral}
-O projeto tem como objetivo principal contribuir para melhorar o ensino dos discentes interessados promovendo ações para capacitação da comunidade a fim de colaborar com o desenvolvimento técnico científico.
+
+O projeto tem como objetivo contribuir no processo de ensino-aprendizagem do cidadão interessado em imergir nas linguagens de programação e novas tecnologias da indústria 4.0.
+
 
 \subsection{Objetivos Específicos}
 
+
 \begin{itemize}
- \item Proporcionar um melhor ensino sobre Ncurses para os alunos de informática. 
- \item Ensinar Ncurses para a sociedade por meio de uma playlist no youtube.
+ \item Proporcionar um melhor ensino sobre Ncurses para os alunos de informática.
+ \item Democratizar aulas de Ncurse, em português,  no Youtube não só para a comunidade acadêmica mas também para a população externa.
 \end{itemize}
 
 
 % seção de justificativa %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Justificativa}
-A razão da implementação desse projeto é buscar a democratização do conhecimento visto que existem poucos conteúdos na língua portuguesa no youtube sobre a biblioteca Ncurses.
+A razão da implementação desse projeto é buscar a democratização do conhecimento visto que existem poucos conteúdos em língua portuguesa no youtube sobre a biblioteca Ncurses.
 
-
-\begin{figure}[!htb]
+\begin{figure}[ht]
 \centering
-\includegraphics[width=.80\linewidth]{imagem.png}
-\caption{Exemplo de aplicação do Ncurses.}
+\includegraphics[width=.80\linewidth]{imagens/imagem.png}
+\caption{Exemplo de aplicação do Ncurses}
 \label{fig:xsort}
 \end{figure}
 
 
 % seção de metodologia %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Metodologia}
-
-Descrever como (por quais métodos) os objetivos serão alcançados.
-
-O algoritmo é descrito abaixo:
+ O método de pesquisa escolhido favorece uma liberdade na análise dos conceitos e teorias que serão abordadas, possibilitando assumir várias posições no decorrer dopercurso. 
+ Para obter os resultados pretendidos, a equipe começará pela etapa da fundamentação teórica, onde serão levantados os principais conceitos sobre o tema, a fim de aprimorar e embasar todo trabalho.
+ Em seguida, serão estruturados roteiros  que irão guiar cada integrante na elaboração das suas respectivas atividades.
+ Ademais,  serão feitas reuniões periódicas e ajustes das ações em andamento e também  a elaboração de slides para auxiliar no processo de gravação das aulas.
+ Outrossim, aulas serão ministradas e gravadas com o suporte de toda a  equipe e posteriormente organizadas em uma playlist dentro de um canal feito exclusivamente para o projeto no Youtube.
+ Por fim, um relatório final será elaborado e entregue ao departamento responsável com o intuito de registrar e efetivar o trabalho desenvolvido pelos estudantes.
 
 % subseção equipamentos %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Equipamentos Necessários}
-\begin{itemize}
- \item Programas de edição de vídeos.
- \item Computador.
-\end{itemize}
 
 %Listar os equipamentos necessários para a implementação do projeto.
-
+\begin{itemize}
+ \item Programas de edição de vídeos 
+ \item Programas para a criação de slides
+ \item Acesso a internet de qualidade
+ \item Câmera ou webcam de qualidade
+ \item Materiais em geral como: folhas, caneta, etc
+ \item Computador e smartphones para cada integrante da equipe.
+\end{itemize}
 
 % subseção com algoritmo %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Implementação}
-
-A implementação será feita por meio de uma pequena playlist no youtube.
-
+ A implementação será feita por meio da criação de uma playlist em um canal específico do projeto no Youtube e/ou plataforma escolhida pelo professor orientador do projeto.
 
 %\begin{algorithm}
 %\caption{Algoritmo Ysort}\label{alg:ysort}
@@ -127,13 +134,11 @@ A implementação será feita por meio de uma pequena playlist no youtube.
 %\State $v\gets \mathrm{maxvalor}{(estado)}$
 %\State \textbf{returna} a ação $a$ em sucessores(estado) cujo valor é $v$ %\Comment{comentario}
 
-
 % \While{$r\not=0$}\Comment{We have the answer if r is 0}
 % \State $a\gets b$
 % \State $b\gets r$
 % \State $r\gets a\bmod b$
 % \EndWhile\label{euclidendwhile}
-
 
 %\EndFunction
 %\Function{maxvalor}{estado}\Comment{retorna o valor estático}
@@ -159,23 +164,22 @@ A implementação será feita por meio de uma pequena playlist no youtube.
 %\end{algorithmic}
 %\end{algorithm}
 
-
-
-
 % seção Plano de Trabalho %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Plano de Trabalho}
 
  \begin{itemize}
-  \item Pesquisa do conteudo
-  \item implementação dos códigos que serão usados para exemplificação
-  \item roteiro dos videos
-  \item editar os videos 
- \end{itemize}
-
+  \item Pesquisa do conteúdo 
+  \item Implementação dos códigos que serão usados para exemplificação
+  \item Roteiro dos vídeos
+  \item Criação dos slides e dos vídeos
+  \item Editar os vídeos
+  \item Criação da playlist no canal no Youtube
+  \item Elaboração do relatório final
+  \item Entrega e validação do projeto pelo setor responsável
+\end{itemize}
 
 % seção Plano de Trabalho %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Cronograma}
-
 
 \begin{table}
 \begin{center}
@@ -183,10 +187,14 @@ A implementação será feita por meio de uma pequena playlist no youtube.
 \begin{tabular}{|l|r|}
   \hline \hline
   \textbf{Etapas} & \textbf{Datas} \\ \hline \hline
-  Pesquisa do conteudo & 24/06 \\ \hline
-  implementação dos códigos & 03/07 \\ \hline
-  roteiro dos videos & 11/07 \\ \hline
-  editar os videos & 15/07 \\ \hline \hline
+   Pesquisar o conteúdo & 24/06/ \\ \hline
+   implementação dos códigos & 05/07/ \\ \hline
+   roteiro dos vídeos & 12/07/ \\ \hline
+   Criação dos slides e vídeos  & 19/07/ \\ \hline
+   Editar os vídeos  & 23/07/ \\ \hline
+   Criação da Playlist  & 30/08/ \\ \hline
+   Elaboração do Relatório Final  & 01/09/ \\ \hline
+   Entrega e validação & 16/09/2021 \\ \hline \hline
 \end{tabular} 
 \label{tab:resultados}
 \end{center}
@@ -214,8 +222,7 @@ Não há impacto econômico relevante.
 % subseção de impacto social %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Impacto Social}
 
-O projeto visa contribuir com a sociedade transmitindo conhecimento gratuito aberto a todas as pessoas
-no youtube
+O projeto visa contribuir com a sociedade transmitindo conhecimento gratuito aberto a todas as pessoas no youtube.
 
 % subseção de impacto ambiental %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Impacto Ambiental}
@@ -225,13 +232,12 @@ Não há impacto ambiental relevante.
 % subseção de transferências %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Transferências}
 
-O ProgramAuto terá como objetivo a execução de aulas para ensinar a linguagem C aos discentes interessados. Contará com sua exposição de ensino gravada que será disponibilizada e a elaboração de relatórios a fim de cumprir com os aspectos estabelecidos no Plano de Trabalho. O projeto transfere conhecimento para todas as pessoas de forma gratuita a fim de colaborar com a sociedade no seu desenvolvimento cultural e intelectual.
+O projeto transfere conhecimento para todas as pessoas de forma gratuita a fim de colaborar com a sociedade no seu desenvolvimento cultural e intelectual.
 
 
 % seção de resultados esperados %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Resultados Esperados}
-
-Espera-se que os indivíduos consigam sair do curso com uma fluência na biblioteca Ncurses sabendo resolver problemas relativamente complexos.
+Ao fim do curso, espera-se que os indivíduos contemplados tenham plena capacidade e autonomia na elaboração, manutenção e aperfeiçoamento de  projetos e sistemas que utilizem a biblioteca Ncurses.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % referências bibliográficas %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
