--- a/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -94,7 +94,7 @@ A razão da implementação desse projeto é buscar a democratização do conhec
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=.80\linewidth]{imagens/imagem.png}
+\includegraphics[width=.80\linewidth]{imagem.png}
 \caption{Exemplo de aplicação do Ncurses}
 \label{fig:xsort}
 \end{figure}
