modificação comentando a figura

--- a/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -92,12 +92,12 @@ O projeto tem como objetivo contribuir no processo de ensino-aprendizagem do cid
 \section{Justificativa}
 A razão da implementação desse projeto é buscar a democratização do conhecimento visto que existem poucos conteúdos em língua portuguesa no youtube sobre a biblioteca Ncurses.
 
-\begin{figure}[ht]
-\centering
-\includegraphics[width=.80\linewidth]{imagem.png}
-\caption{Exemplo de aplicação do Ncurses}
-\label{fig:xsort}
-\end{figure}
+%\begin{figure}[ht]
+%\centering
+%\includegraphics[width=.80\linewidth]{imagem.png}
+%\caption{Exemplo de aplicação do Ncurses}
+%\label{fig:xsort}
+%\end{figure}
 
 
 % seção de metodologia %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
