--- a/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -189,10 +189,10 @@ A razão da implementação desse projeto é buscar a democratização do conhec
   \textbf{Etapas} & \textbf{Datas} \\ \hline \hline
    Pesquisar o conteúdo & 24/06/ \\ \hline
    implementação dos códigos & 05/07/ \\ \hline
-   roteiro dos vídeos & 12/07/ \\ \hline
-   Criação dos slides e vídeos  & 19/07/ \\ \hline
-   Editar os vídeos  & 23/07/ \\ \hline
-   Criação da Playlist  & 30/08/ \\ \hline
+%   roteiro dos vídeos & 12/07/ \\ \hline
+%   Criação dos slides e vídeos  & 19/07/ \\ \hline
+%   Editar os vídeos  & 23/07/ \\ \hline
+%   Criação da Playlist  & 30/08/ \\ \hline
    Elaboração do Relatório Final  & 01/09/ \\ \hline
    Entrega e validação & 16/09/2021 \\ \hline \hline
 \end{tabular} 
