--- a/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -126,43 +126,6 @@ A razão da implementação desse projeto é buscar a democratização do conhec
 \subsection{Implementação}
  A implementação será feita por meio da criação de uma playlist em um canal específico do projeto no Youtube e/ou plataforma escolhida pelo professor orientador do projeto.
 
-%\begin{algorithm}
-%\caption{Algoritmo Ysort}\label{alg:ysort}
-%\begin{algorithmic}[1]
-%\Function{ysort}{estado}\Comment{retorna uma ação}
-%\State \textbf{Entradas}: estado é a configuração atual do jogo
-%\State $v\gets \mathrm{maxvalor}{(estado)}$
-%\State \textbf{returna} a ação $a$ em sucessores(estado) cujo valor é $v$ %\Comment{comentario}
-
-% \While{$r\not=0$}\Comment{We have the answer if r is 0}
-% \State $a\gets b$
-% \State $b\gets r$
-% \State $r\gets a\bmod b$
-% \EndWhile\label{euclidendwhile}
-
-%\EndFunction
-%\Function{maxvalor}{estado}\Comment{retorna o valor estático}
-%\If{fim(estado)}
-%   \State \textbf{retorna} estatico(estado)
-%\EndIf
-%\State $v \gets -\infty$
-%\For{todas ações $a$ nos sucessores(estado)}
-%    \State $v \gets \max{(v, \mathrm{minvalor}(a))}$
-%\EndFor
-%\State \textbf{retorna} $v$
-%\EndFunction
-%\Function{minvalor}{estado}\Comment{retorna o valor estático}
-%\If{fim(estado)}
-%   \State \textbf{retorna} estatico(estado)
-%\EndIf
-%\State $v \gets \infty$
-%\For{todas ações $a$ nos sucessores(estado)}
-%    \State $v \gets \min{(v, \mathrm{maxvalor}(a))}$
-%\EndFor
-%\State \textbf{retorna} $v$
-%\EndFunction
-%\end{algorithmic}
-%\end{algorithm}
 
 % seção Plano de Trabalho %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Plano de Trabalho}
@@ -172,10 +135,10 @@ A razão da implementação desse projeto é buscar a democratização do conhec
   \item Implementação dos códigos que serão usados para exemplificação
   \item Roteiro dos vídeos
   \item Criação dos slides e dos vídeos
-  \item Editar os vídeos
-  \item Criação da playlist no canal no Youtube
-  \item Elaboração do relatório final
-  \item Entrega e validação do projeto pelo setor responsável
+ % \item Editar os vídeos
+%  \item Criação da playlist no canal no Youtube
+%  \item Elaboração do relatório final
+%  \item Entrega e validação do projeto pelo setor responsável
 \end{itemize}
 
 % seção Plano de Trabalho %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
