adicionando informação no cronograma

--- a/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -143,6 +143,7 @@ A razão da implementação desse projeto é buscar a democratização do conhec
 
 % seção Plano de Trabalho %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Cronograma}
+Tabela contendo todas as informações acerca do planejamento do projeto bem como suas datas
 
 \begin{table}
 \begin{center}
