--- a/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -145,6 +145,16 @@ A razão da implementação desse projeto é buscar a democratização do conhec
 \section{Cronograma}
 Tabela contendo todas as informações acerca do planejamento do projeto bem como suas datas
 
+
+ begin{figure}[ht]
+ centering
+ includegraphics[width=.80\linewidth]{imagem.png}
+ caption{Exemplo de aplicação do Ncurses}
+ label{fig:xsort}
+ end{figure}
+
+
+
 \begin{table}
 \begin{center}
  \caption{Tabela de cronograma do projeto de extensão}
