--- a/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -92,7 +92,7 @@ O projeto tem como objetivo contribuir no processo de ensino-aprendizagem do cid
 \section{Justificativa}
 A razão da implementação desse projeto é buscar a democratização do conhecimento visto que existem poucos conteúdos em língua portuguesa no youtube sobre a biblioteca Ncurses.
 
-\begin{figure}[ht]
+\begin{figure}[!htbp]
 \centering
 \includegraphics[width=.50\linewidth]{imagem.png}
 \caption{Exemplo de aplicação do Ncurses}
@@ -145,7 +145,24 @@ A razão da implementação desse projeto é buscar a democratização do conhec
 \section{Cronograma}
 Tabela contendo todas as informações acerca do planejamento do projeto bem como suas datas
 
-
+ \begin{table}
+ \begin{center}
+  \caption{Tabela de cronograma do projeto de extensão}
+ \begin{tabular}{|l|r|}
+   \hline \hline
+   \textbf{Etapas} & \textbf{Datas} \\ \hline \hline
+    Pesquisar o conteúdo & 24/06/ \\ \hline
+    implementação dos códigos & 05/07/ \\ \hline
+ %   roteiro dos vídeos & 12/07/ \\ \hline
+ %   Criação dos slides e vídeos  & 19/07/ \\ \hline
+ %   Editar os vídeos  & 23/07/ \\ \hline
+ %   Criação da Playlist  & 30/08/ \\ \hline
+    Elaboração do Relatório Final  & 01/09/ \\ \hline
+    Entrega e validação & 16/09/2021 \\ \hline \hline
+ \end{tabular}
+ \label{tab:resultados}
+ \end{center}
+ \end{table}
 
 
 
@@ -171,26 +188,6 @@ Tabela contendo todas as informações acerca do planejamento do projeto bem com
 
 % seção de impactos alcançados %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Impactos e Transferências}
-
- \begin{table}
- \begin{center}
-  \caption{Tabela de cronograma do projeto de extensão}
- \begin{tabular}{|l|r|}
-   \hline \hline
-   \textbf{Etapas} & \textbf{Datas} \\ \hline \hline
-    Pesquisar o conteúdo & 24/06/ \\ \hline
-    implementação dos códigos & 05/07/ \\ \hline
- %   roteiro dos vídeos & 12/07/ \\ \hline
- %   Criação dos slides e vídeos  & 19/07/ \\ \hline
- %   Editar os vídeos  & 23/07/ \\ \hline
- %   Criação da Playlist  & 30/08/ \\ \hline
-    Elaboração do Relatório Final  & 01/09/ \\ \hline
-    Entrega e validação & 16/09/2021 \\ \hline \hline
- \end{tabular}
- \label{tab:resultados}
- \end{center}
- \end{table}
-
 
 
 % subseção de impacto científico %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
