--- a/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -145,7 +145,7 @@ A razão da implementação desse projeto é buscar a democratização do conhec
 \section{Cronograma}
 Tabela contendo todas as informações acerca do planejamento do projeto bem como suas datas
 
- \begin{table}
+ \begin{table}[!htbp]
  \begin{center}
   \caption{Tabela de cronograma do projeto de extensão}
  \begin{tabular}{|l|r|}
