--- a/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -180,6 +180,7 @@ A razão da implementação desse projeto é buscar a democratização do conhec
 
 % seção Plano de Trabalho %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Cronograma}
+Cronograma acerca do projeto de extensão com datas para sua realização 
 
 \begin{table}[!htbp] %modificação feita para fixar a tabela
 \begin{center}
