--- a/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -115,10 +115,10 @@ A razão da implementação desse projeto é buscar a democratização do conhec
 %Listar os equipamentos necessários para a implementação do projeto.
 \begin{itemize}
  \item Programas de edição de vídeos 
- \item Programas para a criação de slides
+% \item Programas para a criação de slides
  \item Acesso a internet de qualidade
  \item Câmera ou webcam de qualidade
- \item Materiais em geral como: folhas, caneta, etc
+% \item Materiais em geral como: folhas, caneta, etc
  \item Computador e smartphones para cada integrante da equipe.
 \end{itemize}
 
@@ -171,9 +171,9 @@ A razão da implementação desse projeto é buscar a democratização do conhec
   \item Pesquisa do conteúdo 
   \item Implementação dos códigos que serão usados para exemplificação
   \item Roteiro dos vídeos
-  \item Criação dos slides e dos vídeos
+%  \item Criação dos slides e dos vídeos
   \item Editar os vídeos
-  \item Criação da playlist no canal no Youtube
+%  \item Criação da playlist no canal no Youtube
   \item Elaboração do relatório final
   \item Entrega e validação do projeto pelo setor responsável
 \end{itemize}
