--- a/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -170,7 +170,7 @@ A razão da implementação desse projeto é buscar a democratização do conhec
  \begin{itemize}
   \item Pesquisa do conteúdo 
   \item Implementação dos códigos que serão usados para exemplificação
-  \item Roteiro dos vídeos
+%  \item Roteiro dos víd
 %  \item Criação dos slides e dos vídeos
   \item Editar os vídeos
 %  \item Criação da playlist no canal no Youtube
