--- a/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -195,7 +195,7 @@ Cronograma acerca do projeto de extensão com datas para sua realização
 %   Editar os vídeos  & 23/07/ \\ \hline
 %   Criação da Playlist  & 30/08/ \\ \hline
 %   Elaboração do Relatório Final  & 01/09/ \\ \hline
-   Entrega e validação & 16/09/2021 \\ \hline \hline
+   Entrega e valida & 16/09/2021 \\ \hline \hline
 \end{tabular} 
 \label{tab:resultados}
 \end{center}
