--- a/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -92,12 +92,12 @@ O projeto tem como objetivo contribuir no processo de ensino-aprendizagem do cid
 \section{Justificativa}
 A razão da implementação desse projeto é buscar a democratização do conhecimento visto que existem poucos conteúdos em língua portuguesa no youtube sobre a biblioteca Ncurses.
 
-\begin{figure}[!htbp] %modificação feita para fixar a imagem
-\centering
-\includegraphics[width=.10\linewidth]{imagem.png}
-\caption{Exemplo de aplicação do Ncurses}
-\label{fig:xsort}
-\end{figure}
+%\begin{figure}[!htbp] %modificação feita para fixar a imagem
+%\centering
+%\includegraphics[width=.10\linewidth]{imagem.png}
+%\caption{Exemplo de aplicação do Ncurses}
+%\label{fig:xsort}
+%\end{figure}
 
 
 % seção de metodologia %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -200,6 +200,17 @@ Cronograma acerca do projeto de extensão com datas para sua realização
 \label{tab:resultados}
 \end{center}
 \end{table}
+
+
+
+ \begin{figure}[!htbp] %modificação feita para fixar a imagem
+ \centering
+ \includegraphics[width=.10\linewidth]{imagem.png}
+ \caption{Exemplo de aplicação do Ncurses}
+ \label{fig:xsort}
+ \end{figure}
+
+
 
 
 % seção de impactos alcançados %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
