--- a/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -92,6 +92,15 @@ O projeto tem como objetivo contribuir no processo de ensino-aprendizagem do cid
 \section{Justificativa}
 A razão da implementação desse projeto é buscar a democratização do conhecimento visto que existem poucos conteúdos em língua portuguesa no youtube sobre a biblioteca Ncurses.
 
+
+ \begin{figure}[ht] %modificação feita para fixar a imagem
+ \centering
+ \includegraphics[width=.10\linewidth]{imagem.png}
+ \caption{Exemplo de aplicação do Ncurses}
+ \label{fig:xsort}
+ \end{figure}
+
+
 %\begin{figure}[!htbp] %modificação feita para fixar a imagem
 %\centering
 %\includegraphics[width=.10\linewidth]{imagem.png}
@@ -102,11 +111,17 @@ A razão da implementação desse projeto é buscar a democratização do conhec
 
 % seção de metodologia %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Metodologia}
- O método de pesquisa escolhido favorece uma liberdade na análise dos conceitos e teorias que serão abordadas, possibilitando assumir várias posições no decorrer dopercurso. 
- Para obter os resultados pretendidos, a equipe começará pela etapa da fundamentação teórica, onde serão levantados os principais conceitos sobre o tema, a fim de aprimorar e embasar todo trabalho.
+ 
+O método de pesquisa escolhido favorece uma liberdade na análise dos conceitos e teorias que serão abordadas, possibilitando assumir várias posições no decorrer dopercurso. 
+ 
+
+Para obter os resultados pretendidos, a equipe começará pela etapa da fundamentação teórica, onde serão levantados os principais conceitos sobre o tema, a fim de aprimorar e embasar todo trabalho.
  Em seguida, serão estruturados roteiros  que irão guiar cada integrante na elaboração das suas respectivas atividades.
+ 
  Ademais,  serão feitas reuniões periódicas e ajustes das ações em andamento e também  a elaboração de slides para auxiliar no processo de gravação das aulas.
+ 
  Outrossim, aulas serão ministradas e gravadas com o suporte de toda a  equipe e posteriormente organizadas em uma playlist dentro de um canal feito exclusivamente para o projeto no Youtube.
+ 
  Por fim, um relatório final será elaborado e entregue ao departamento responsável com o intuito de registrar e efetivar o trabalho desenvolvido pelos estudantes.
 
 % subseção equipamentos %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -182,7 +197,7 @@ A razão da implementação desse projeto é buscar a democratização do conhec
 \section{Cronograma}
 Cronograma acerca do projeto de extensão com datas para sua realização 
 
-\begin{table}[!htbp] %modificação feita para fixar a tabela
+\begin{table}[ht] %modificação feita para fixar a tabela
 \begin{center}
  \caption{Tabela de cronograma do projeto de extensão}
 \begin{tabular}{|l|r|}
@@ -202,13 +217,6 @@ Cronograma acerca do projeto de extensão com datas para sua realização
 \end{table}
 
 
-
- \begin{figure}[!htbp] %modificação feita para fixar a imagem
- \centering
- \includegraphics[width=.10\linewidth]{imagem.png}
- \caption{Exemplo de aplicação do Ncurses}
- \label{fig:xsort}
- \end{figure}
 
 
 
