--- a/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/backup1/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -185,10 +185,10 @@ Para obter os resultados pretendidos, a equipe começará pela etapa da fundamen
  \begin{itemize}
   \item Pesquisa do conteúdo 
   \item Implementação dos códigos que serão usados para exemplificação
-%  \item Roteiro dos víd
-%  \item Criação dos slides e dos vídeos
+  \item Roteiro dos víd
+  \item Criação dos slides e dos vídeos
   \item Editar os vídeos
-%  \item Criação da playlist no canal no Youtube
+  \item Criação da playlist no canal no Youtube
   \item Elaboração do relatório final
   \item Entrega e validação do projeto pelo setor responsável
 \end{itemize}
@@ -207,10 +207,10 @@ Cronograma acerca do projeto de extensão com datas para sua realização
    implementação dos códigos & 05/07/ \\ \hline
    roteiro dos vídeos & 12/07/ \\ \hline
    Criação dos slides e vídeos  & 19/07/ \\ \hline
-%   Editar os vídeos  & 23/07/ \\ \hline
-%   Criação da Playlist  & 30/08/ \\ \hline
-%   Elaboração do Relatório Final  & 01/09/ \\ \hline
-   Entrega e validação & 16/09/2021 \\ \hline \hline
+   Editar os vídeos  & 23/07/ \\ \hline
+   Criação da Playlist  & 30/08/ \\ \hline
+   Elaboração do Relatório Final  & 01/09/ \\ \hline
+   Entrega e validação &  \\ \hline \hline
 \end{tabular} 
 \label{tab:resultados}
 \end{center}
