--- a/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
+++ b/testesGit/pext-matdiscreta-benante-sobrenome1-sobrenome2.tex
@@ -92,7 +92,7 @@ O projeto tem como objetivo contribuir no processo de ensino-aprendizagem do cid
 \section{Justificativa}
 A razão da implementação desse projeto é buscar a democratização do conhecimento visto que existem poucos conteúdos em língua portuguesa no youtube sobre a biblioteca Ncurses.
 
-\begin{figure}[!htbp]
+\begin{figure}[ht] %modificação feita para fixar a imagem
 \centering
 \includegraphics[width=.50\linewidth]{imagem.png}
 \caption{Exemplo de aplicação do Ncurses}
@@ -102,12 +102,18 @@ A razão da implementação desse projeto é buscar a democratização do conhec
 
 % seção de metodologia %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Metodologia}
- O método de pesquisa escolhido favorece uma liberdade na análise dos conceitos e teorias que serão abordadas, possibilitando assumir várias posições no decorrer dopercurso. 
- Para obter os resultados pretendidos, a equipe começará pela etapa da fundamentação teórica, onde serão levantados os principais conceitos sobre o tema, a fim de aprimorar e embasar todo trabalho.
- Em seguida, serão estruturados roteiros  que irão guiar cada integrante na elaboração das suas respectivas atividades.
- Ademais,  serão feitas reuniões periódicas e ajustes das ações em andamento e também  a elaboração de slides para auxiliar no processo de gravação das aulas.
- Outrossim, aulas serão ministradas e gravadas com o suporte de toda a  equipe e posteriormente organizadas em uma playlist dentro de um canal feito exclusivamente para o projeto no Youtube.
- Por fim, um relatório final será elaborado e entregue ao departamento responsável com o intuito de registrar e efetivar o trabalho desenvolvido pelos estudantes.
+ 
+O método de pesquisa escolhido favorece uma liberdade na análise dos conceitos e teorias que serão abordadas, possibilitando assumir várias posições no decorrer dopercurso. 
+ 
+Para obter os resultados pretendidos, a equipe começará pela etapa da fundamentação teórica, onde serão levantados os principais conceitos sobre o tema, a fim de aprimorar e embasar todo trabalho.
+ 
+Em seguida, serão estruturados roteiros  que irão guiar cada integrante na elaboração das suas respectivas atividades.
+ 
+Ademais,  serão feitas reuniões periódicas e ajustes das ações em andamento e também  a elaboração de slides para auxiliar no processo de gravação das aulas.
+ 
+Outrossim, aulas serão ministradas e gravadas com o suporte de toda a  equipe e posteriormente organizadas em uma playlist dentro de um canal feito exclusivamente para o projeto no Youtube.
+ 
+Por fim, um relatório final será elaborado e entregue ao departamento responsável com o intuito de registrar e efetivar o trabalho desenvolvido pelos estudantes.
 
 % subseção equipamentos %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Equipamentos Necessários}
@@ -126,6 +132,43 @@ A razão da implementação desse projeto é buscar a democratização do conhec
 \subsection{Implementação}
  A implementação será feita por meio da criação de uma playlist em um canal específico do projeto no Youtube e/ou plataforma escolhida pelo professor orientador do projeto.
 
+%\begin{algorithm}
+%\caption{Algoritmo Ysort}\label{alg:ysort}
+%\begin{algorithmic}[1]
+%\Function{ysort}{estado}\Comment{retorna uma ação}
+%\State \textbf{Entradas}: estado é a configuração atual do jogo
+%\State $v\gets \mathrm{maxvalor}{(estado)}$
+%\State \textbf{returna} a ação $a$ em sucessores(estado) cujo valor é $v$ %\Comment{comentario}
+
+% \While{$r\not=0$}\Comment{We have the answer if r is 0}
+% \State $a\gets b$
+% \State $b\gets r$
+% \State $r\gets a\bmod b$
+% \EndWhile\label{euclidendwhile}
+
+%\EndFunction
+%\Function{maxvalor}{estado}\Comment{retorna o valor estático}
+%\If{fim(estado)}
+%   \State \textbf{retorna} estatico(estado)
+%\EndIf
+%\State $v \gets -\infty$
+%\For{todas ações $a$ nos sucessores(estado)}
+%    \State $v \gets \max{(v, \mathrm{minvalor}(a))}$
+%\EndFor
+%\State \textbf{retorna} $v$
+%\EndFunction
+%\Function{minvalor}{estado}\Comment{retorna o valor estático}
+%\If{fim(estado)}
+%   \State \textbf{retorna} estatico(estado)
+%\EndIf
+%\State $v \gets \infty$
+%\For{todas ações $a$ nos sucessores(estado)}
+%    \State $v \gets \min{(v, \mathrm{maxvalor}(a))}$
+%\EndFor
+%\State \textbf{retorna} $v$
+%\EndFunction
+%\end{algorithmic}
+%\end{algorithm}
 
 % seção Plano de Trabalho %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Plano de Trabalho}
@@ -135,60 +178,37 @@ A razão da implementação desse projeto é buscar a democratização do conhec
   \item Implementação dos códigos que serão usados para exemplificação
   \item Roteiro dos vídeos
   \item Criação dos slides e dos vídeos
- % \item Editar os vídeos
-%  \item Criação da playlist no canal no Youtube
-%  \item Elaboração do relatório final
-%  \item Entrega e validação do projeto pelo setor responsável
+  \item Editar os vídeos
+  \item Criação da playlist no canal no Youtube
+  \item Elaboração do relatório final
+  \item Entrega e validação do projeto pelo setor responsável
 \end{itemize}
 
 % seção Plano de Trabalho %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Cronograma}
-Tabela contendo todas as informações acerca do planejamento do projeto bem como suas datas
 
- \begin{table}[!htbp]
- \begin{center}
-  \caption{Tabela de cronograma do projeto de extensão}
- \begin{tabular}{|l|r|}
-   \hline \hline
-   \textbf{Etapas} & \textbf{Datas} \\ \hline \hline
-    Pesquisar o conteúdo & 24/06/ \\ \hline
-    implementação dos códigos & 05/07/ \\ \hline
- %   roteiro dos vídeos & 12/07/ \\ \hline
- %   Criação dos slides e vídeos  & 19/07/ \\ \hline
- %   Editar os vídeos  & 23/07/ \\ \hline
- %   Criação da Playlist  & 30/08/ \\ \hline
-    Elaboração do Relatório Final  & 01/09/ \\ \hline
-    Entrega e validação & 16/09/2021 \\ \hline \hline
- \end{tabular}
- \label{tab:resultados}
- \end{center}
- \end{table}
-
-
-
-%\begin{table}
-%\begin{center}
-% \caption{Tabela de cronograma do projeto de extensão}
-%\begin{tabular}{|l|r|}
-%  \hline \hline
-%  \textbf{Etapas} & \textbf{Datas} \\ \hline \hline
-%   Pesquisar o conteúdo & 24/06/ \\ \hline
-%   implementação dos códigos & 05/07/ \\ \hline
-%   roteiro dos vídeos & 12/07/ \\ \hline
-%   Criação dos slides e vídeos  & 19/07/ \\ \hline
-%   Editar os vídeos  & 23/07/ \\ \hline
-%   Criação da Playlist  & 30/08/ \\ \hline
-%   Elaboração do Relatório Final  & 01/09/ \\ \hline
-%   Entrega e validação & 16/09/2021 \\ \hline \hline
-%\end{tabular} 
-%\label{tab:resultados}
-%\end{center}
-%\end{table}
+\begin{table}[ht] %modificação feita para fixar a tabela
+\begin{center}
+ \caption{Tabela de cronograma do projeto de extensão}
+\begin{tabular}{|l|r|}
+  \hline \hline
+  \textbf{Etapas} & \textbf{Datas} \\ \hline \hline
+   Pesquisar o conteúdo & 24/06/ \\ \hline
+   implementação dos códigos & 05/07/ \\ \hline
+   roteiro dos vídeos & 12/07/ \\ \hline
+   Criação dos slides e vídeos  & 19/07/ \\ \hline
+   Editar os vídeos  & 23/07/ \\ \hline
+   Criação da Playlist  & 30/08/ \\ \hline
+   Elaboração do Relatório Final  & 01/09/ \\ \hline
+   Entrega e validação & 16/09/ \\ \hline \hline
+\end{tabular} 
+\label{tab:resultados}
+\end{center}
+\end{table}
 
 
 % seção de impactos alcançados %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Impactos e Transferências}
-
 
 % subseção de impacto científico %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Impacto Científico}
