--- a/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -37,7 +37,7 @@
 
 % capa %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{ProgramAuto: Biblioteca Ncurses}
-\author{Ruben Carlo Benante \\ Alex Bruno Seabra \\ Adriano Jose Morais Barros Silva \\ Jose Roberto Lopes Gentile Almeida \\ Arlon Nata Alves Granja Delmondes \\ Victor Lucas Cavalcante Moreira \\ Joao Pedro Henderson Sarruf \\ Victor Machado De Araujo}
+\author{Ruben Carlo Benante \\ Jose Roberto Lopes Gentile Almeida \\ Adriano Jose Morais Barros Silva \\ Alex Bruno Seabra \\ Arlon Nata Alves Granja Delmondes \\ Victor Lucas Cavalcante Moreira \\ Joao Pedro Henderson Sarruf \\ Victor Machado De Araujo}
 
 \begin{document}
 
@@ -76,7 +76,7 @@ O projeto de extensão vai ser um minicurso sobre a biblioteca Ncurses em lingua
 
 \subsection{Objetivo Geral}
 
-O projeto tem como objetivo contribuir no processo de ensino-aprendizagem do cidadão interessado em imergir nas linguagens de programação promovendo ações para capacitação da comunidade a fim de colaborar com o desenvolvimento técnico científico.
+O projeto tem como objetivo apresentar e ensinar a Biblioteca Ncurses e suas aplicações por meio de um minicurso passando pelos principais tópicos com projetos de fixação e um projeto final sintetizando tudo o que foi ensinado.
 
 
 
@@ -85,18 +85,19 @@ O projeto tem como objetivo contribuir no processo de ensino-aprendizagem do cid
 
 
 \begin{itemize}
- \item Proporcionar um melhor ensino sobre Ncurses para os alunos de informática.
- \item Democratizar aulas de Ncurses, em português, no Youtube não só para a comunidade acadêmica mas também para a população externa.
+ \item Promover uma compreensão da biblioteca Ncurses.
+ \item Ensinar a desenvolver um jogo simples assim como interfaces e menus.
+ \item Desenvolver uma base para outras Bibliotecas de criação de interface.   
 \end{itemize}
 
 
 % seção de justificativa %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Justificativa}
-A razão da implementação desse projeto é buscar a democratização do conhecimento visto que existem poucos conteúdos em língua portuguesa no youtube sobre a biblioteca Ncurses.
+A razão da implementação desse projeto é a importancia do aprendizado da Biblioteca Ncurses que serve de base para outras Bibliotecas criação de interface e ajudar os estudantes de programação 1.
 
 \begin{figure}[ht] %modificação feita para fixar a imagem
 \centering
-\includegraphics[width=.60\linewidth]{imagem.png}
+\includegraphics[width=.50\linewidth]{imagens/imagem.png}
 \caption{Exemplo de aplicação do Ncurses}
 \label{fig:xsort}
 \end{figure}
