atualização do arqyuivo latex

--- a/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -37,7 +37,7 @@
 
 % capa %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{ProgramAuto: Biblioteca Ncurses}
-\author{Ruben Carlo Benante \\ Jose Roberto Lopes Gentile Almeida \\ Adriano Jose Morais Barros Silva \\ Alex Bruno Seabra \\ Arlon Nata Alves Granja Delmondes \\ Victor Lucas Cavalcante Moreira \\ Joao Pedro Henderson Sarruf \\ Victor Machado De Araujo}
+\author{Ruben Carlo Benante \\ Arlon Nata Alves Granja Delmondes \\ Jose Roberto Lopes Gentile Almeida \\ Alex Bruno Seabra \\ Adriano Jose Morais Barros Silva \\ Victor Lucas Cavalcante Moreira \\ Joao Pedro Henderson Sarruf \\ Victor Machado De Araujo}
 
 \begin{document}
 
@@ -97,7 +97,7 @@ A razão da implementação desse projeto é a importancia do aprendizado da Bib
 
 \begin{figure}[ht] %modificação feita para fixar a imagem
 \centering
-\includegraphics[width=.50\linewidth]{imagem.png}
+\includegraphics[width=.50\linewidth]{imagens/imagem.png}
 \caption{Exemplo de aplicação do Ncurses}
 \label{fig:xsort}
 \end{figure}
